sass/style.scss
@charset "utf-8";

$white-ter: #838383;
$grey-darker: #515151;
$white: hsl(0, 0%, 100%);

.title.is-2{
    text-align: center;
}
$subtitle-color: $grey-darker;

#navbar-brandTitle{
    font-size: 25px;
}

$navbar-box-shadow-size: 0 5px 8px 0;
$navbar-box-shadow-color: rgba(80, 80, 80, 0.664);
$navbar-background-color: $grey-darker;

$navbar-item-color: $white;
$navbar-item-hover-background-color: $white-ter;
$navbar-item-hover-color: $white;

$navbar-tab-active-border-bottom-width: 0px;
#navbar{
    position: fixed;
    top: 0;
    width: 100%;
}
.navbar-burger:hover{
    color: $white;
    background-color: $white-ter;
}

$footer-background-color: $grey-darker;
$footer-padding: 1rem 1.5rem 1.4rem;

footer{
    border-radius: 25px 25px 0px 0px;
    box-shadow: -29px -1px 16px rgba(0, 0, 0, 0.45);
    position: fixed;
    bottom: 0;
    width: 100%;
}

html,body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
body > footer {
    margin-top: auto;
}

@import "../node_modules/bulma/sass/utilities/_all.sass";
@import "../node_modules/bulma/sass/base/_all.sass";
@import "../node_modules/bulma/sass/utilities/controls.sass";
@import "../node_modules/bulma/sass/elements/title.sass";
@import "../node_modules/bulma/sass/components/navbar.sass";
@import "../node_modules/bulma/sass/components/_all.sass";
@import "../node_modules/bulma/sass/layout/footer.sass";
@import "../node_modules/bulma/sass/elements/image.sass";
@import "../node_modules/bulma/sass/helpers/flexbox.sass";

